Adding few update's like working search now CBIR part to be done

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         <input type="submit" value="Upload">
 </form>
 <p>Or</p>
-<form name="searchForm" method="post">
+<form action="result" method="post">
         <input type="text" name="search" />
         <br><input type="submit" value="Search"></br>
 </form> 
